<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    android:id="@+id/table"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:stretchColumns="*"
    android:background="@drawable/app_background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="218dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Class Group"
            android:id="@+id/classGrouptxt"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <Spinner
            android:layout_width="110dp"
            android:layout_height="44dp"
            android:id="@+id/classGroup"
            android:layout_gravity="center_horizontal"
            android:spinnerMode="dropdown"
            android:entries="@array/classGroup_arrays"
            android:prompt="@string/classGroup_prompt"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Date"
            android:id="@+id/date"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp" />

        <EditText
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="0.63" />

    </LinearLayout>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="#87ceeb" >

        <TextView
            android:id="@+id/textView11"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:text="@string/studentNum"
            android:textColor="#FFFFFF"
            android:layout_height="fill_parent"
            android:textSize="17dp"
            android:layout_width="wrap_content" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent" >

            <View style="@style/Divider" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView12"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:text="@string/name"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent" >

            <View style="@style/Divider" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView13"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:text="@string/Class"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />



        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent" >

            <View style="@style/Divider" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView14"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:text="@string/absent"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </TableRow>

    <!-- display this button in 3rd column via layout_column(zero based) -->

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#87ceeb" >

        <TextView
            android:id="@+id/textView21"
            android:padding="5dp"
            android:text="R00123456"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent" >

            <View style="@style/Divider" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView22"
            android:padding="5dp"
            android:text="Joe Bloggs"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent" >

            <View style="@style/Divider" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView23"
            android:padding="5dp"
            android:text="Com3"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent" >

            <View style="@style/Divider" />
        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            android:layout_column="6"
            android:checked="false" />


    </TableRow>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="280dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Home"
            android:id="@+id/homebtn"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="70dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:id="@+id/savebtn"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp" />
    </LinearLayout>

</TableLayout>